Added support page and related things in the user side.

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -22,7 +22,7 @@
                 <a class="hover:underline" href="/user/login"><button class="glass_btn text-white-500 px-2 py-1 rounded-full">Sign In</button></a>
             <% } else{ %>
                 <div class="text-white space-x-2">
-                    <a href="/user/cart"><i class="fas fa-question-circle"></i></a>
+                    <a href="/user/support"><i class="fas fa-question-circle"></i></a>
                     <a href="/user/wishlist"><i class="fas fa-heart"></i></a>
                     <a href="/user/cart"><i class="fas fa-shopping-cart"></i></a>
                     <a href="/user/profile"><i class="fas fa-user"></i></a>
